--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,13 +13,13 @@
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="e.kyleg.obfuscationapp.ui.volume.VolumeFragment"
-        android:label="@string/title_volume"
+        android:name="e.kyleg.obfuscationapp.ui.volume.DashboardFragment"
+        android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
         android:id="@+id/navigation_notifications"
         android:name="e.kyleg.obfuscationapp.ui.notifications.NotificationsFragment"
-        android:label="@string/title_settings"
+        android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
 </navigation>
